--- a/src/components/ContactMe/ContactMe.css
+++ b/src/components/ContactMe/ContactMe.css
@@ -61,7 +61,7 @@
 .cm-input{
     height: 4rem;
     margin-right: 1rem;
-    min-width: 90%;
+    width: 90%;
     margin-bottom: 2rem;
     border-radius: 1.3rem;
     border: none;
