--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -44,6 +44,7 @@
 .navbar-right{
     display: flex;
     font-family: "Truculenta";
+    z-index: 10;
 }
 
 .navbar-contents{
@@ -87,6 +88,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
     /* gap: 0.5rem; */
     gap: 0.55vw;
     /* padding: 0.25rem 0.6rem; */
